# Vault-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: mainnet.env.example  uat.env.example
docs/: postman.md
examples/: .env.example  postman_collection.json  postman_market_payload.json
exports/mappings/: mappings.json  polymarket_league_mappings.csv  polymarket_team_mappings.csv
exports/reference/: polymarket_football_leagues.csv  polymarket_football_leagues.sql  polymarket_football_teams.csv  polymarket_football_teams.sql  polymarket_league_reference.csv  polymarket_leagues.csv  polymarket_leagues.sql  polymarket_team_reference.csv  polymarket_teams.csv
exports/reviews/: bundesliga_polymarket_review.csv  epl_polymarket_review.csv  ucl_domestic_overlap_review.csv  ucl_only_review.csv
exports/reviews/final/: laliga_polymarket_review.csv  serie_a_polymarket_review.csv  ucl_current_cycle_polymarket_review.csv
scripts/: start_mainnet.sh  start_uat.sh
sql/: mysql_001_create_polymarket_pred_vault_mapping.sql  postgres_001_create_polymarket_pred_vault_mapping.sql
src/pred_polymarket_sync/: __init__.py  __main__.py  cli.py  cms_client.py  config.py  exporters.py  fixture_markets.py  http.py  http_api.py  mapping_loader.py  matcher.py  models.py  orderbook.py  polymarket.py  sinks.py  sources.py  state.py  token_mapper.py  uat_market_publisher.py  utils.py
tests/: test_cli.py  test_exporters.py  test_fixture_markets.py  test_http_api.py  test_matcher.py  test_orderbook.py  test_state.py  test_uat_market_publisher.py
(+3 files in other folders)
