[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pred-polymarket-sync"
version = "0.1.0"
description = "Automation scripts for matching Pred sports markets to Polymarket and streaming full-depth orderbooks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pred-polymarket-sync = "pred_polymarket_sync.cli:main"
pred-polymarket-http = "pred_polymarket_sync.http_api:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pred_polymarket_sync = ["static/*"]
